Third Transformation - Ignored Prompt Hints